--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,10 @@
     "viewport-units-buggyfill": "~0.5.5",
     "vunit": "~0.2.0",
     "element-inviewport": "~2.0.1",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "animate.css-scss": "~3.1.0",
+    "jquery-viewport-checker": "~1.8.5",
+    "onScreen": "*"
   },
   "resolutions": {
     "jquery-placeholder": "~2.1.3",
