--- a/bower.json
+++ b/bower.json
@@ -4,16 +4,12 @@
   "private": "true",
   "dependencies": {
     "foundation": "zurb/bower-foundation",
-    "viewport-units-buggyfill": "~0.5.5",
     "vunit": "~0.2.0",
-    "element-inviewport": "~2.0.1",
     "jquery": "~2.1.4",
     "animate.css-scss": "~3.1.0",
-    "jquery-viewport-checker": "~1.8.5",
-    "onScreen": "*"
+    "onScreen": "*",
   },
   "resolutions": {
     "jquery-placeholder": "~2.1.3",
-    "modernizr": "~3.2.0"
   }
 }
