--- a/storage/themes/riddelphotographers/bower.json
+++ b/storage/themes/riddelphotographers/bower.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "homepage": "http://foundation.zurb.com",
   "dependencies": {
-    "foundation-sites": "~6.0.0",
+    "foundation-sites": "~6.1.2",
     "motion-ui": "~1.1.0",
     "vunit": "~0.2.0",
     "slick-carousel": "~1.5.9",
@@ -28,5 +28,8 @@
     "test",
     "tests"
   ],
-  "private": true
+  "private": true,
+  "resolutions": {
+    "foundation-sites": "~6.1.2"
+  }
 }
